# stm32-learn

bw-img-comm/: Cargo.toml
bw-img-comm/src/: lib.rs
bw-player-backend/: Cargo.toml
bw-player-backend/assets/: badapple.imgs
bw-player-backend/src/: main.rs
embassy-stm32f1xx-blink/: Cargo.toml
embassy-stm32f1xx-blink/src/: main.rs
embassy-stm32f1xx-template/: Cargo.toml
embassy-stm32f1xx-template/src/: main.rs
iic-oled-rs/: Cargo.toml
iic-oled-rs/src/: consts.rs  lib.rs  oled.rs
pio-blink/: compile_commands.json
pio-blink/.cache/clangd/index/: main.c.1DDEB7256A905624.idx  main.cpp.B38F2E04665892EA.idx
pio-blink/src/: main.c
rust-stm32f1xx-blink/: Cargo.toml
rust-stm32f1xx-blink/.cargo/: config.toml
rust-stm32f1xx-blink/src/: main.rs
rust-stm32f1xx-bw-player/: Cargo.toml
rust-stm32f1xx-bw-player/src/: main.rs
rust-stm32f1xx-digital-tube/: .gitignore  Cargo.toml
rust-stm32f1xx-digital-tube/src/: display.rs  main.rs  tube.rs
rust-stm32f1xx-oled/: Cargo.toml
rust-stm32f1xx-oled/src/: main.rs
rust-stm32f1xx-sensor/: Cargo.toml
rust-stm32f1xx-sensor/src/: main.rs
rust-stm32f1xx-template/: Cargo.toml
rust-stm32f1xx-template/src/: main.rs
rust-stm32f1xx-test/: Cargo.toml
rust-stm32f1xx-test/src/: main.rs
rust-stm32f1xx-usb/: Cargo.toml
rust-stm32f1xx-usb/src/: main.rs
