[package]
name = "embassy-stm32f1xx-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "*", features = ["defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any"] }
embassy-sync = { version = "*", features = ["defmt"] }
embassy-executor = { version = "*", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "*", features = ["defmt"] }
embassy-futures = { version = "*" }

defmt = "*"
defmt-rtt = "*"

cortex-m = { version = "*", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "*"
embedded-hal = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
futures = { version = "*", default-features = false, features = ["async-await"] }
heapless = { version = "*", default-features = false }
nb = "*"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
