[package]
name = "rust-stm32f1xx-blink"
version = "0.1.0"
edition = "2021"
authors = ["Arkuna <nightalpha23@gmail.com>"]

[dependencies]
cortex-m = {version = "*", features = ["critical-section-single-core"]}
cortex-m-rt = "*"
stm32f1xx-hal = {version = "*", features = ["rt", "stm32f103", "medium"]}
fugit = "*"
defmt = "*"
defmt-rtt = "*"
panic-probe = {version = "*", features = ["print-defmt"]}
heapless = "*"
nb = "*"
