[package]
name = "rust-stm32f1xx-bw-player"
version = "0.1.0"
edition = "2021"
authors = ["arkuna23 <nightalpha23@gmail.com>"]

[dependencies]
cortex-m = {version = "*", features = ["critical-section-single-core"]}
cortex-m-rt = "*"
stm32f1xx-hal = {version = "*", features = ["rt", "stm32f103", "medium"]}
defmt = "*"
defmt-rtt = "*"
fugit = "*"
panic-probe = {version = "*", features = ["print-defmt"]}
nb = "*"
embedded-hal = "*"
iic-oled-rs = { path = "../iic-oled-rs" }
bw-img-comm = { path = "../bw-img-comm" }
usb-device = { version = "0.2", features = ["defmt"]}
usbd-serial = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev]
opt-level = "z"
lto = true          # Enable Link Time Optimization
