[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[dependencies]
cortex-m = {version = "*", features = ["critical-section-single-core"]}
cortex-m-rt = "*"
stm32f1xx-hal = {version = "*", features = ["rt", "stm32f103", "medium"]}
defmt = "*"
defmt-rtt = "*"
panic-probe = {version = "*", features = ["print-defmt"]}
nb = "*"
